# gdsl

./: .gitignore  CMakeLists.txt  README  install.sh
example/: .test_list.c.swp  CMakeLists.txt  test_hash.c  test_list.c  test_rw_lock.c  test_xor.c
include/: CMakeLists.txt  bitmap.h  debug.h  gstring.h  hash.h  list.h  rw_lock.h  string.h  xor.h
src/: CMakeLists.txt  bitmap.c  hash.c  list.c  rw_lock.c  string.c  xor.c
